Matek 4-es szorzótábla

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -28,6 +28,18 @@ a, .btn-link {
     opacity: 1;
 }
 
+.btn-green-selected {
+    color: #fff;
+    background-color: #75bf75;
+    border-color: darkgreen;
+    border-width: medium;
+    padding: 10px;
+    margin: 5px;
+    opacity: 0;
+    transition: opacity 0.3s;
+    opacity: 1;
+}
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
